--- a/src/onegov/election_day/locale/fr_CH/LC_MESSAGES/onegov.election_day.po
+++ b/src/onegov/election_day/locale/fr_CH/LC_MESSAGES/onegov.election_day.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-08-08 12:33+0200\n"
+"POT-Creation-Date: 2024-12-10 16:58+0100\n"
 "PO-Revision-Date: 2022-03-22 07:59+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: \n"
@@ -1433,6 +1433,12 @@ msgstr "Pas encore d’abonnés."
 
 msgid "Locale"
 msgstr "Locaux"
+
+msgid "Subscribed"
+msgstr "Abonnement"
+
+msgid "Unsubscribed"
+msgstr "Annulation"
 
 msgid "Active"
 msgstr "Actif"
